<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiBaby</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello worldss!</string>
    <string name="reminder">提醒</string>
    <string name="note">记事本</string>
    <string name="more">更多</string>
    <string name="calendar">日历</string>
    <string name="config">\t系统设置</string>
    <string name="note_title">记事</string>
    <string name="notetitle">事情概要</string>
    <string name="notecontent">事情内容</string>
    <string name="saveNote">保存记事</string>
    <string name="notice_dialog_share">分享</string>

</resources>
