<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/notetitle"
        android:gravity="center" >
    </EditText>

    <EditText
        android:id="@+id/etNoteContent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/notecontent"
        android:gravity="center" >
    </EditText>
    
    <Button android:id="@+id/btnSaveNote"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/saveNote"/>

</LinearLayout>