<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="9" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55sp"
        android:layout_weight="1"
        android:background="@color/burlywood"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/calendar"
            
            android:gravity="center"
            android:text="@string/calendar"
            android:textSize="12sp"
            tools:ignore="NestedWeights" >
        </TextView>

        <TextView
            android:id="@+id/tvReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/reminder"
            android:gravity="center"
            android:text="@string/reminder"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/note"
            android:gravity="center"
            android:text="@string/note"
            android:textSize="12sp" >
        </TextView>

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/more"
            android:gravity="center"
            android:text="@string/more"
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>